@@ -1,6 +1,7 @@
-DEFINED_PHASES=compile install postinst postrm preinst setup
-DEPEND=>=virtual/jdk-1.4 latex? ( dev-texlive/texlive-pstricks ) >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 dev-java/ant-trax >=dev-java/javatoolkit-0.3.0-r2 >=dev-lang/python-2.4
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup
+DEPEND=>=virtual/jdk-1.4 latex? ( dev-texlive/texlive-pstricks:0 ) >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 dev-java/ant-trax >=dev-java/javatoolkit-0.3.0-r2 >=dev-lang/python-2.4
 DESCRIPTION=Java program for drawing Feynman diagrams
+EAPI=5
 HOMEPAGE=http://jaxodraw.sourceforge.net/
 IUSE=latex elibc_FreeBSD doc source elibc_FreeBSD
 KEYWORDS=~amd64 ~x86
@@ -9,4 +10,4 @@ RDEPEND=>=virtual/jre-1.4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip
 SLOT=0
 SRC_URI=mirror://sourceforge/jaxodraw/jaxodraw-2.0-1_src.tar.gz http://downloads.sourceforge.net/jaxodraw/axodraw4j_2008_11_19.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	java-ant-2	8f79fa38524086d2b7d4e9cd442ca6cc	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=baf223d7b836da5607cfd0df13307db3
+_md5_=123fc7f497435f6f5245a6af67502aa2
