@@ -1,15 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST axodraw4j_2008_11_19.tar.gz 20930 SHA256 60353a25563cb4e987304a7d030bbc7e85c688c881f804cd08e8ba76a370af61
-DIST jaxodraw-2.0-1_src.tar.gz 3740719 SHA256 e3f456214b9a11dbef030d56a1c6495ea627b0464820792e1998cae9c55554a1
-EBUILD jaxodraw-2.0.1.ebuild 1487 SHA256 0d6e3358de17875435ac09f7814b73d4ac235220b57f087e40862e03c95b87f2 SHA512 0cff1df0ac60b8d5e62115caa4a2730e223cbf1d28835c0cddae7773a2e7f9a0589b2a4c67a319ed8df2305bd89dda6ad3660bfc89290e614b4efcfd131af24e WHIRLPOOL d41a2717b2531aa1b367b1c047bc2679f4890ae14c8c96f47f958988ea957a655b1c9358e89ff76fd3cff4d898f15afab5da9c3029c17492a8cf8d9d5d4f504e
-MISC ChangeLog 1660 SHA256 6e8be153f1eeb7f61664d823b61f7eb062b27b9ea6c9e650e934f63e6e39d323 SHA512 3a82f5f49593918677a03564510f8c6ad5b4a6dee8a05c12076e5c8575330b7d2310c08416376ddbee28802e45b7310e623ede37ff18dd92e9767e7fe4a75468 WHIRLPOOL 746a481135b87e0c47f67826c66539ab7810850fde3890a29f984238fd7d727e5258f81f41c44080b36c8f4c032632c93940104ed96b3a54261ec4c8a60bfdfd
+DIST axodraw4j_2008_11_19.tar.gz 20930 SHA256 60353a25563cb4e987304a7d030bbc7e85c688c881f804cd08e8ba76a370af61 SHA512 81bfcbd1b121104e0058654ac5520d0f570f9a915e9f6dfb8c52c11e9cf92f1e01c800182c2dc34e503a6eceafdff462b4f57dfa5bb5db979101a106c10d88c8 WHIRLPOOL 4614a82192fdcc8606be1d634c3a3634107d268a3246043f68ca8bb9d4d3c07955c04e89b7886a7debdec67896ac286647e6208615cad73d57c8d66b0c6c19fc
+DIST jaxodraw-2.0-1_src.tar.gz 3740719 SHA256 e3f456214b9a11dbef030d56a1c6495ea627b0464820792e1998cae9c55554a1 SHA512 ec5866ba03b6f3ecb01ce92f95aa90959153b92eb571f10764d4d10f2fb7a7a0d02a325eb221600526c94faadd53466cf894e4dcba7201e3494555a6330dba02 WHIRLPOOL a146213c3a31fcf64bf0b626dd1ce2996842990196c9708592b461fb33e019f735396153a400d878971bd459ee056462bbb6ab47974f97efcdcee8520455a1f1
+EBUILD jaxodraw-2.0.1-r1.ebuild 1548 SHA256 35287466596501456517dd916712c3a92d908921ae47be59594aee759b75dfca SHA512 dccb5592eabf0ae1161a903b49c26930ba9c0945cc93ed0c358a1cfd31279bea0192b9e647911972cb88f04725568744b03929db0b75882faf3f4876b3039e4e WHIRLPOOL 1fa38e267e546fb197957300c53e01c768016b43d0b4c76e45c66ab135d89885cd1d9d7943f4d9c4347bdbbd408d51f5df07217a3e07d13846f7ee9a5272f113
+MISC ChangeLog 1971 SHA256 0dfef1f9657a5321b5876f5602a651ee07b6fdd44ec21e3fa130b88498122fb9 SHA512 0026f254d3d8dda99d90608727a307b533bd9cb920c0d7685976d9405db27135a565834da65d69390af6e1a38164b6f073319188b67a046a46fc3e83e2936a25 WHIRLPOOL 1f99dee7811f09bc9145808effe18e01f77d819d6c842f0261f967568dc70ddc9c8678677a256639bb36fdc8b59c97a57a715c42640913cf64b9ad642630187b
 MISC metadata.xml 158 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb SHA512 54f88fc3270968439ba87295b04365a89101c55d33a8c209a56036dc60244e5c73f78ec09484b3e5af28de9dee2159b1dab670cbd5d80a9e0c4543145c0390a3 WHIRLPOOL fcffc4fb6751b5a6eec33aa833f9d7dea0168d3ab67f7e34565370f92fd917ed882bcc57585481bf4d31e601f83a592d99d1c3f50fc793f1c38cd174cc8b2f26
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlDN2D8ACgkQCaWpQKGI+9RZFgCfRNH6svchAPLZmYrRg+eHwBcV
-LsUAn3UWblh1kkf0VsYtV551DovWvCJw
-=smSO
+iQEcBAEBCAAGBQJTNVOuAAoJEJWyH81tNOV9NysH+wYPyxum0VqubTwPQaLwOGpd
+4fBdoaVZ/dIIQfDBrBXQgsivhqM9X/sDact21Km/UAXIi8nre5o02jn1QahUWaVb
+mCniqapaONbd5RSf92enEPRVa/LHHOUyQtr/t0SpM5U+1To0FVh1Pc0BNQm7DIdz
+/f34IWaFwlNg39/rKhoY2kFdC4/JI5aKZgJ34Yt6Xbp7mSRYbb3M1HSR0fqU8xTO
+XPJ+OKZMbErSFCD/2/Rubay80YpxHRlWdhkovH5sgjpMrnntSsiTcLqFp13dLaWO
+kGS8ysRrfXtzlQHDl0v4GQMTBAphc8VO1zzI2kWwuXp4RVt62jeI23wfQFHtRWE=
+=0sqP
 -----END PGP SIGNATURE-----
